package lld.tinyurl;

public class User {
    private String userId;
    private String username;
}
