@startuml
class lld.tinyurl.UrlShortenerService {
- HashMap<String,UrlMapping> longToShort
- HashMap<String,UrlMapping> shortToLong
+ String shortenURL(String)
+ String redirect(String)
+ UrlMapping getStats(String)
}


class lld.tinyurl.UrlMapping {
- String longUrl
- String shortUrl
- User createdBy
- LocalDateTime createdAt
- LocalDateTime expiresAt
}

class lld.tinyurl.User {
- String userId
- String username
}

'Arrows (relationships)
UrlShortenerService "1" *-- "*" UrlMapping : manages
UrlMapping "1" -- "1" User : createdBy

'Space
skinparam nodesep 50
skinparam noderank 50

'Notes for better understanding
note right of UrlShortenerService
    Uses two maps for O(1) lookup
        private HashMap<String, UrlMapping> longToShort;
        private HashMap<String, UrlMapping> shortToLong;
end note

note right of UrlMapping
    Contains stats as well
        clickCount
        createdAt
        expiresAt
end note


@enduml